# Equipo3ETL

./: .gitignore  README.md  create_root.py  extract.ipynb  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: etl.yml
Data/: abastecimientos_sap.xlsx  detalle_apuntamiento_insumos.xlsx
config/: settings.yaml
data/raw/actividades/: actividades.xlsx
scripts/: loadData.py  run_abastecimientos.py  run_actividades.py  run_all.py  run_insumos.py  run_rep_maaquinaria.py
sql/: 1.crear_tablas.sql
src/etl_project/: CSVLoader.py  __init__.py  conexiondb.py  config.py  loaders.py  transforms.py
src/etl_project/pipelines/: abastecimientos.py  actividades.py  insumos.py  rep_maquinaria.py
src/etl_project/views/: plots.py
